--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         
         <!-- TOP Container -->
         <div class="topContainer">
-            <div class="whiteCircle">
-            </div>
+            <!-- <div class="whiteCircle">
+            </div> -->
             
             <div class="blackTag">
                 <img id="mec" src="./assets/Copy of mec_logo.png" onClick="goToLink('http://mec.ac.in')">
@@ -137,17 +137,17 @@
         <div class="bottomDiv">
 
             <div class="bottomHead">
-                <h1>Our Title Sponsor</h1>
+                <h1>Our Associate Sponsor</h1>
             </div>
 
             <div class="bottomImage">
                 <div>
-                    <!-- <img src="assets/paytmlogo.png" width="100%" /> -->
+                    <img src="assets/2019/visualiq.png" width="100%" />
                 </div>
             </div>
 
             <div class="bottomContent">
-                <p>With an aligned vision to progress India towards a digital future, _____ believes in empowering the youth of today to find noteworthy solutions for tomorrow.</p>
+                <p>With an aligned vision to progress India towards a digital future, VisualIQ believes in empowering the youth of today to find noteworthy solutions for tomorrow.</p>
             </div>
 
             <div class="other-sponsors sponsor-ksum">
