sponsor div changed

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="bottomDiv">
 
             <div class="bottomHead">
-                <h1>Our Associate Sponsor</h1>
+                <h1>Our Associate Sponsors</h1>
             </div>
 
             <div class="bottomImage">
@@ -147,10 +147,12 @@
             </div>
 
             <div class="bottomContent">
-                <p>With an aligned vision to progress India towards a digital future, VisualIQ believes in empowering the youth of today to find noteworthy solutions for tomorrow.</p>
+                <div>
+                    <img src="assets/ksum_logo.png" >
+                </div>
             </div>
 
-            <div class="other-sponsors sponsor-ksum">
+            <!-- <div class="other-sponsors sponsor-ksum">
                 <div class="sponsor">
                     <h5>Venue Partner</h5>
                     <img src="assets/ksum_logo.png" >
@@ -161,14 +163,14 @@
                     <h5>Media Partner</h5>
                     <img src="assets/tnie_logo.png" >
                 </div>                
-            </div>
+            </div> -->
 
-            <div class="other-sponsors sponsor-ewnture">
+            <!-- <div class="other-sponsors sponsor-ewnture">
                 <div class="sponsor">
                     <h5>Merchandise Partner</h5>
                     <img src="assets/ewnture_logo.jpg" >
                 </div>                
-            </div>
+            </div> -->
         </div>
 
 
