--- a/index.html
+++ b/index.html
@@ -216,6 +216,15 @@
             
         </div>
 
+        <div class="prizeDetails">
+            <h3>Note</h3>
+            <p>
+                <ul>
+                    <li><i class="fas fa-chevron-circle-right"></i> The Top 3 teams will recieve cash prizes</li>
+                    <li><i class="fas fa-chevron-circle-right"></i> The First,Second and Third winners will be given a direct entry to the finals of IBeto 2019</li>
+                </ul>
+            </p>
+        </div>
         
         <div class="mapDiv">
 		    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.532104006632!2d76.35092894993046!3d10.055414274802414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c04e3627551%3A0xeaddd199d9bbde2b!2sKerala+Technology+Innovation+Zone+(KTIZ)!5e0!3m2!1sen!2sin!4v1529947938071" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
