--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div> -->
             
             <div class="blackTag">
-                <img id="mec" src="./assets/Copy of mec_logo.png" onClick="goToLink('http://mec.ac.in')">
+                <img id="mec"  src="./assets/Copy of mec_logo.png" onClick="goToLink('http://mec.ac.in')">
                 <img id="ibeto" src="./assets/2019/ibeto logo.png" onClick="goToLink('http://ibeto.excelmec.org')">
                 <img id="excel" src="./assets/2019/Excel logo.png" onClick="goToLink('http://excelmec.org')">
             </div>
@@ -222,7 +222,7 @@
 
             <div class="details">
                 <h1>Exciting Prizes</h1>
-                <h3>The Top three teams will receive:</h3>
+                <p class = ltext>The Top three teams will receive:</p>
                 <ul>
                     <li><i class="fas fa-chevron-circle-right"></i>Cash Prizes</li>
                     <li><i class="fas fa-chevron-circle-right"></i>Direct entry into IBeTo 2019 Finals</li>
