--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
             </div>
 
             <div class="midImage">
-                <i class="far fa-calendar-alt"></i>
-                <div id="midImagecontent">
-                    <div><span>August</span></div>
-                    <div><h1>10-11</h1></div>
-                    <div><h6>11:30 am to 11:30 am</h6></div>
+                    
+                <div id="midAddresscontent">
+                    <i class="far fa-calendar-alt"></i>
+                    <div><span> August</span></div>
+                    <div><span id = "imageline2">10-11</sapn></div>
+                    <div><span>11:30 am to 11:30 am</span></div>
                 </div>
             </div>
 
@@ -138,7 +139,7 @@
         <div class="bottomDiv">
 
             <div class="bottomHead">
-                <h1>Our Associate Sponsors</h1>
+                <h1>Associating Partners</h1>
             </div>
 
             <div class="bottomImage">
@@ -245,7 +246,7 @@
 
         <div class="contactDiv">
             <div class="contactHead">
-                <h1>Contact info</h1>
+                <h1>Contacts</h1>
             </div>
             <div class="contactBody">
                 <div class="person">
@@ -257,7 +258,7 @@
                         Chairman<br/>
                         Excel 2019<br/>
                         <i class="far fa-envelope"></i> <a href="mailto:shehzincs@excelmec.org" target="_blank">shehzincs@excelmec.org</a><br/>
-                        <i class="fas fa-phone"></i> <a href="tel:+919847789993" target="_blank"></a>+91 98477 89993</a><br/>
+                        <i class="fas fa-phone"></i> <a href="tel:+919847789993" target="_blank">+91 98477 89993</a><br/>
                     </div>
                 </div>
                 <div class="person">
