--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1>This August,</h1>
                 <h1>Hack for a cause.</h1>
                 <p>
-                    <b>Excel 2019</b> bring you <b>HackForTomorrow</b>, a 24-hour hackathon, and an excellent open-source platform for you to innovate for a better tomorrow.
+                    <b>Excel 2019</b> bring you <b>HackForTomorrow</b>, a 24-hour hackathon that gives you the ideal platform to solve real world problems and innovate for a better tomorrow.
                 </p>
                 <button onClick="window.location.href='https://www.instamojo.com/princemathew/hackfortomorrow-by-paytm-bfi-and-excel-2018/'">
                     GET TICKETS NOW
@@ -58,9 +58,6 @@
         
         <div class="logosContainer">
             <div>
-                <a href="https://medium.com/paytm-build-for-india" target="_blank">
-                    <!-- <img src="assets/paytmlogo.png" class="paytm" alt=""> -->
-                </a>
                 <a href="http://mec.ac.in" target="_blank">
                     <img src="assets/Copy of mec_logo.png" alt="">
                 </a>
@@ -80,8 +77,8 @@
         <div class="midContainer" id="about">
             
             <div class="midContent">
-                <p>Hack your ideas into reality, as you team up with other bright minds to gift the world an innovative open-source solution using the power of collaboration and technology!
-                </p>
+                <p>HackForTomorrow is a 24-hr product development competition focused on innovation. Team up with other bright minds and tackle some of the biggest problems we face today.
+                    Explore the possibilities of technology hack your ideas into reality. </p>
             </div>
 
             <div class="midImage">
@@ -119,6 +116,7 @@
 
             <div class="details">
                 <h1>Problem Statements</h1>
+                <p class = ltext2>You aren’t restricted to just the given problem, we encourage them to think outside the box and bring solutions to other issues as long as they're socially relavent.</p>
                 <ul>
                     <li><i class="fas fa-chevron-circle-right"></i>Improving Governance</li>
                     <li><i class="fas fa-chevron-circle-right"></i>Project: Rebuild Kerala</li>
