--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             
             <div class="midContent">
                 <p>HackForTomorrow is a 24-hr product development competition focused on innovation. Team up with other bright minds and tackle some of the biggest problems we face today.
-                    Explore the possibilities of technology hack your ideas into reality. </p>
+                    Explore the possibilities of technology and hack your ideas into reality. </p>
             </div>
 
             <div class="midImage">
@@ -285,7 +285,7 @@
                         CS Tech Manager<br/>
                         Excel 2019<br/>
                         <i class="far fa-envelope"></i> <a href="mailto:kuriakoseeldho@excelmec.org" target="_blank">kuriakoseeldho@excelmec.org</a><br/>
-                        <i class="fas fa-phone"></i> <a href="tel:+91 7558991555" target="_blank">+91 7558991555</a><br/>
+                        <i class="fas fa-phone"></i> <a href="tel:+91 75589 91555" target="_blank">+91 7558991555</a><br/>
                     </div>
                 </div>
             </div>
