--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <div class="midContainer" id="about">
             
             <div class="midContent">
+                <h1>About</h1>
                 <p>HackForTomorrow is a 24-hr product development competition focused on innovation. Team up with other bright minds and tackle some of the biggest problems we face today.
                     Explore the possibilities of technology and hack your ideas into reality! </p>
             </div>
@@ -103,7 +104,7 @@
                 </div>
                 <div id="midAddresscontent">
                     <div><span>KTIZ, Kinfra Hi-Tech Park</span></div>
-                    <div><span id="line2">Kalamassery</span></div>
+                    <div><span>Kalamassery</span></div>
                     <div><span>Kochi - 683503</span></div>
                 </div>
             </div>
