--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>
                     <b>Excel 2019</b> brings you <b>HackForTomorrow</b>, a 24-hour hackathon that gives you the ideal platform to solve real world problems and innovate for a better tomorrow.
                 </p>
-                <button onClick="window.location.href='https://www.instamojo.com/princemathew/hackfortomorrow-by-paytm-bfi-and-excel-2018/'">
+                <button onClick="goToLink('https://www.townscript.com/e/hackfortomorrow-2019-211211')">
                     GET TICKETS NOW
                 </button><!-- 
                 <button onClick="window.location.href='./rules-and-regulations.pdf'">
