--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 
             <div class="details">
                 <h1>Exciting Prizes</h1>
-                <p class = ltext>The Top three teams will receive:</p>
+                <p class = ltext>The top 3 teams will receive:</p>
                 <ul>
                     <li><i class="fas fa-chevron-circle-right"></i>Cash Prizes</li>
                     <li><i class="fas fa-chevron-circle-right"></i>Direct entry into IBeTo 2019 Finals</li>
-                    <li><i class="fas fa-chevron-circle-right"></i>Certificates of merit</li>
+                    <li><i class="fas fa-chevron-circle-right"></i>Certificates of Merit</li>
                 </ul>
             </div>
 
