--- a/index.html
+++ b/index.html
@@ -85,24 +85,24 @@
         <div class="midContent">
             <h1>About</h1>
             <p>HackForTomorrow is a 24-hr product development competition focused on innovation. Team up with other bright minds and tackle some of the biggest problems we face today. Explore the possibilities of technology and hack your ideas into reality!
-                </p>
+            </p>
         </div>
 
         <div class="midImage">
 
-            <div id=m idImagecontentI>
+            <div id=midImagecontentI>
                 <i class="far fa-calendar-alt"></i>
             </div>
 
             <div id="midImagecontent">
                 <div><span> August</span></div>
-                <div><span id="imageline2">17, 18</sapn></div>
+                <div><span id="imageline2">17-18</sapn></div>
                     <div><span>11:30 AM to 11:30 AM</span></div>
             </div>
         </div>
 
         <div class="midAddress">
-            <div id=m idAddresscontentI>
+            <div id=midAddresscontentI>
                 <i class="fas fa-map-marker-alt"></i>
             </div>
             <div id="midAddresscontent">
