--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="icon" href="assets/2019/hftlogo.png" />
-    <title>HackForTomorrow 2019</title>
+    <title>Litmus7 - HackForTomorrow 2019</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -35,8 +35,10 @@
 
     <!-- TOP Container -->
     <div class="topContainer">
-        <!-- <div class="whiteCircle">
-            </div> -->
+        <a href="https://litmus7.com/">
+            <div class="whiteCircle">
+            </div>
+        </a>
 
         <div class="blackTag">
             <img id="mec" src="./assets/Copy of mec_logo.png" onClick="goToLink('http://mec.ac.in')">
@@ -61,6 +63,8 @@
         </div>
     </div>
 
+    <!-- <div class="whiteCircle">
+    </div> -->
 
     <div class="logosContainer">
         <div>
@@ -123,7 +127,7 @@
 
         <div class="details">
             <h1>Problem Statements</h1>
-            <p class=l text2>Participants are encouraged to think outside the box and bring about socially relevant solutions to today’s problems.<br> We encourage the participants to find solutions for the following domains:</p>
+            <p class=ltext2>Participants are encouraged to think outside the box and bring about socially relevant solutions to today’s problems.<br> We encourage the participants to find solutions for the following domains:</p>
             <ul>
                 <li><i class="fas fa-chevron-circle-right"></i>Improving Governance</li>
                 <li><i class="fas fa-chevron-circle-right"></i>Project: Rebuild Kerala</li>
@@ -146,41 +150,53 @@
 
 
     <!-- Bootom Div -->
-    <div class="bottomDiv">
+
+    <div>
 
         <div class="bottomHead">
+            <h1>Title Sponsor</h1>
+
+            <img src="assets/2019/litmus7.png " width="30% " class="titlesp">
+        </div>
+
+    </div>
+
+
+    <div class="bottomDiv ">
+
+        <div class="bottomHead ">
             <h1>Associating Partners</h1>
         </div>
 
-        <div class="bottomImage">
+        <div class="bottomImage ">
             <div>
-                <img src="assets/2019/visualiq.png" width="100%" />
+                <img src="assets/2019/visualiq.png " width="80% " />
             </div>
         </div>
 
-        <div class="bottomContent">
+        <div class="bottomContent ">
             <div>
-                <img src="assets/ksum_logo.png" width="100%">
+                <img src="assets/ksum_logo.png " width="10% ">
             </div>
         </div>
 
-        <!-- <div class="other-sponsors sponsor-ksum">
-                <div class="sponsor">
-                    <h5>Venue Partner</h5>
-                    <img src="assets/ksum_logo.png" >
-                </div>                
+        <!-- <div class="other-sponsors sponsor-ksum ">
+            <div class="sponsor ">
+                <h5>Venue Partner</h5>
+                <img src="assets/ksum_logo.png ">
             </div>
-            <div class="other-sponsors sponsor-tnie">
-                <div class="sponsor">
-                    <h5>Media Partner</h5>
-                    <img src="assets/tnie_logo.png" >
-                </div>                
-            </div> -->
+        </div>
+        <div class="other-sponsors sponsor-tnie ">
+            <div class="sponsor ">
+                <h5>Media Partner</h5>
+                <img src="assets/tnie_logo.png ">
+            </div>
+        </div> -->
 
-        <!-- <div class="other-sponsors sponsor-ewnture">
-                <div class="sponsor">
+        <!-- <div class="other-sponsors sponsor-ewnture ">
+                <div class="sponsor ">
                     <h5>Merchandise Partner</h5>
-                    <img src="assets/ewnture_logo.jpg" >
+                    <img src="assets/ewnture_logo.jpg " >
                 </div>                
             </div> -->
     </div>
@@ -189,106 +205,106 @@
 
 
 
-    <!-- PrizeDiv
-        <div class="prizeDiv">
-            
-            <div class="prizeHead">
-                <h1>Exciting Prizes</h1>
-            </div> -->
+    <!-- PrizeDiv -->
+    <!-- <div class="prizeDiv ">
 
-    <!-- <div class="second">
-                <div class="secondBox">
-                    <i class="fas fa-trophy trophy"></i>
-                    <div>
-                        <span >2<sup>nd</sup> prize</span>
-                        <span ><i class="fas fa-rupee-sign"></i></span>
-                    </div>
+        <div class="prizeHead ">
+            <h1>Exciting Prizes</h1>
+        </div>
+
+        <div class="second ">
+            <div class="secondBox ">
+                <i class="fas fa-trophy trophy "></i>
+                <div>
+                    <span>2<sup>nd</sup> prize</span>
+                    <span><i class="fas fa-rupee-sign "></i></span>
                 </div>
             </div>
-            
-            <div class="first">
-                <div class="firstBox">
-                    <i class="fas fa-trophy trophy"></i>
-                    <div>
-                        <span >1<sup>st</sup> prize</span>
-                        <span ><i class="fas fa-rupee-sign"></i></span>
-                    </div>
+        </div>
+
+        <div class="first ">
+            <div class="firstBox ">
+                <i class="fas fa-trophy trophy "></i>
+                <div>
+                    <span>1<sup>st</sup> prize</span>
+                    <span><i class="fas fa-rupee-sign "></i></span>
                 </div>
-            </div> -->
+            </div>
+        </div>
 
-    <!-- <div class="third">
-                <div class="thirdBox">
-                    <i class="fas fa-trophy trophy"></i>
-                    <div>
-                        <span >3<sup>rd</sup> prize</span>
-                        <span ><i class="fas fa-rupee-sign"></i></span>
-                    </div>
+        <div class="third ">
+            <div class="thirdBox ">
+                <i class="fas fa-trophy trophy "></i>
+                <div>
+                    <span>3<sup>rd</sup> prize</span>
+                    <span><i class="fas fa-rupee-sign "></i></span>
                 </div>
-            </div> -->
+            </div>
+        </div>
 
-    <!-- </div> -->
+    </div> -->
 
 
-    <div class="detailsDiv">
+    <div class="detailsDiv ">
 
-        <div class="details">
+        <div class="details ">
             <h1>Exciting Prizes</h1>
-            <p class=l text>The top 3 teams will receive:</p>
+            <!-- <p class=l text>The top 3 teams will receive:</p> -->
             <ul>
-                <li><i class="fas fa-chevron-circle-right"></i>Cash Prizes</li>
-                <li><i class="fas fa-chevron-circle-right"></i>Direct entry into IBeTo 2019 Finals</li>
-                <li><i class="fas fa-chevron-circle-right"></i>Certificates of Merit</li>
+                <li><i class="fas fa-chevron-circle-right "></i>30K in cash prizes</li>
+                <li><i class="fas fa-chevron-circle-right "></i><a href="http://ibeto.excelmec.org " style="text-decoration: none; color: white">Direct entry into IBeTo 2019 Finals and a chance to win 1 Lakh</a></li>
+                <li><i class="fas fa-chevron-circle-right "></i>Certificates of Merit</li>
             </ul>
         </div>
 
-        <div class="detailImage">
-            <!-- <i class="fas fa-cogs"></i> -->
-            <img src="./assets/2019/prize.png" />
+        <div class="detailImage ">
+            <!-- <i class="fas fa-cogs "></i> -->
+            <img src="./assets/2019/prize.png " />
         </div>
     </div>
 
 
     <!-- MAP -->
-    <div class="mapDiv" id="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.532104006632!2d76.35092894993046!3d10.055414274802414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c04e3627551%3A0xeaddd199d9bbde2b!2sKerala+Technology+Innovation+Zone+(KTIZ)!5e0!3m2!1sen!2sin!4v1529947938071"
-            width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="mapDiv " id="map ">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.532104006632!2d76.35092894993046!3d10.055414274802414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c04e3627551%3A0xeaddd199d9bbde2b!2sKerala+Technology+Innovation+Zone+(KTIZ)!5e0!3m2!1sen!2sin!4v1529947938071 "
+            width="100% " height="500 " frameborder="0 " style="border:0 " allowfullscreen></iframe>
     </div>
 
 
-    <div class="contactDiv">
-        <div class="contactHead">
+    <div class="contactDiv ">
+        <div class="contactHead ">
             <h1>Contacts</h1>
         </div>
-        <div class="contactBody">
-            <div class="person">
-                <div class="photo">
-                    <img src="assets/2019/shehzin.jpeg" alt="Shehzin">
+        <div class="contactBody ">
+            <div class="person ">
+                <div class="photo ">
+                    <img src="assets/2019/shehzin.jpeg " alt="Shehzin ">
                 </div>
-                <div class="text">
+                <div class="text ">
                     <b>Shehzin Shajahan</b><br/> Chairman
                     <br/> Excel 2019<br/>
-                    <i class="far fa-envelope"></i> <a href="mailto:shehzincs@excelmec.org" target="_blank">shehzincs@excelmec.org</a><br/>
-                    <i class="fas fa-phone"></i> <a href="tel:+919847789993" target="_blank">+91 98477 89993</a><br/>
+                    <i class="far fa-envelope "></i> <a href="mailto:shehzincs@excelmec.org " target="_blank ">shehzincs@excelmec.org</a><br/>
+                    <i class="fas fa-phone "></i> <a href="tel:+919847789993 " target="_blank ">+91 98477 89993</a><br/>
                 </div>
             </div>
-            <div class="person">
-                <div class="photo">
-                    <img src="assets/2019/bhairavi.jpeg" alt="bhairavi">
+            <div class="person ">
+                <div class="photo ">
+                    <img src="assets/2019/bhairavi.jpeg " alt="bhairavi ">
                 </div>
-                <div class="text">
+                <div class="text ">
                     <b>Bhairavi Sameer Shah</b><br/> Social Initiatives Manager<br/> Excel 2019<br/>
-                    <i class="far fa-envelope"></i> <a href="mailto:bhairavi@excelmec.org" target="_blank">bhairavi@excelmec.org</a><br/>
-                    <i class="fas fa-phone"></i> <a href="tel:+91 90613 44877" target="_blank">+91 90613 44877</a><br/>
+                    <i class="far fa-envelope "></i> <a href="mailto:bhairavi@excelmec.org " target="_blank ">bhairavi@excelmec.org</a><br/>
+                    <i class="fas fa-phone "></i> <a href="tel:+91 90613 44877 " target="_blank ">+91 90613 44877</a><br/>
                 </div>
             </div>
-            <div class="person">
-                <div class="photo">
-                    <img src="assets/2019/kuriakose.png" alt="Kuriakose">
+            <div class="person ">
+                <div class="photo ">
+                    <img src="assets/2019/kuriakose.png " alt="Kuriakose ">
                 </div>
-                <div class="text">
+                <div class="text ">
                     <b>Kuriakose Eldho</b><br/> CS Tech Manager<br/> Excel 2019<br/>
-                    <i class="far fa-envelope"></i> <a href="mailto:kuriakoseeldho@excelmec.org" target="_blank">kuriakoseeldho@excelmec.org</a><br/>
-                    <i class="fas fa-phone"></i> <a href="tel:+91 75589 91555" target="_blank">+91 7558991555</a><br/>
+                    <i class="far fa-envelope "></i> <a href="mailto:kuriakoseeldho@excelmec.org " target="_blank ">kuriakoseeldho@excelmec.org</a><br/>
+                    <i class="fas fa-phone "></i> <a href="tel:+91 75589 91555 " target="_blank ">+91 7558991555</a><br/>
                 </div>
             </div>
         </div>
@@ -297,39 +313,39 @@
 
 
     <!-- FooterDiv -->
-    <div class="footerDiv">
+    <div class="footerDiv ">
 
-        <div class="logo">
-            <img src="assets/2019/hftlogo.png" />
+        <div class="logo ">
+            <img src="assets/2019/hftlogo.png " />
             <div>
-                <span><a href="#nav">Home</a></span>
-                <span><a href="#about">About</a></span>
-                <span><a href="https://forms.gle/1cVHjGyQAYwwNqpy9" target="_blank">Partner with us</a></span>
+                <span><a href="#nav ">Home</a></span>
+                <span><a href="#about ">About</a></span>
+                <span><a href="https://forms.gle/1cVHjGyQAYwwNqpy9 " target="_blank ">Partner with us</a></span>
             </div>
         </div>
 
-        <div class="footerIbeto">
-            <img src="./assets/2019/ibeto logo.png" onClick="goToLink('http://ibeto.excelmec.org')">
-            <div><span><a href="http://ibeto.excelmec.org">ibeto.excelmec.org</a></span></div>
+        <div class="footerIbeto ">
+            <img src="./assets/2019/ibeto logo.png " onClick="goToLink( 'http://ibeto.excelmec.org') ">
+            <div><span><a href="http://ibeto.excelmec.org ">ibeto.excelmec.org</a></span></div>
         </div>
 
-        <div class="footerExcel">
-            <img src="./assets/2019/Excel logo.png" onClick="goToLink('http://excelmec.org')">
-            <div><span><a href="http://excelmec.org">excelmec.org</a></span></div>
+        <div class="footerExcel ">
+            <img src="./assets/2019/Excel logo.png " onClick="goToLink( 'http://excelmec.org') ">
+            <div><span><a href="http://excelmec.org ">excelmec.org</a></span></div>
         </div>
 
-        <div class="Excelbrand">
+        <div class="Excelbrand ">
             <span>&copy; Excel 2019</span>
             <span>
-                    <a href="https://www.facebook.com/excelmec" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/excelmec " target="_blank "><i class="fab fa-facebook-square "></i></a>
                     &nbsp;
-                    <a href="https://www.instagram.com/excelmec" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/excelmec " target="_blank "><i class="fab fa-instagram "></i></a>
                 </span>
         </div>
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js "></script>
     <script>
         function goToLink(lnk) {
             window.open(lnk, '_blank');
